--- a/Project.toml
+++ b/Project.toml
@@ -6,3 +6,10 @@ uuid = "b1d2cf81-fcf6-5c93-b2a2-02d157d06f1e"
 EchogramUtils = "98433ae5-64ae-5f75-927a-48d3260c7151"
 ImageFiltering = "6a3955dd-da59-5b1f-98d4-e7296123deb5"
 Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
